Removed httpclient project from sbt